@@ -3,6 +3,7 @@ Changes in quota-tools from 3.13 to 3.14
 * implemented nicer message formatting for warnquota(8) (Jan Kara)
 * quota(1) has -w option to supress line wrapping for long device names (Jan Kara)
 * quota(1) prints grace time even if hard limit is reached (Jan Kara)
+* fixed journaled quota format detection in quotacheck (Jan Kara)
 
 Changes in quota-tools from 3.12 to 3.13
 * fixed mistakes in several error messages, improved error reporting functions
